# safie-mediafile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-to-testpypi.yml  deploy.yml  lint-and-test.yml
safie_mediafile/: __init__.py  _client.py  _exceptions.py
safie_mediafile/_cli/: __init__.py  _cli_app.py  _downloader.py
safie_mediafile/_endpoints/: _device.py  _mediafile.py
scripts/: delete_mediafile_requests.py
tests/cli/: __init__.py  test_parse_time_string.py
